--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1e1f24;
+    background-color: #1e1f24 !important;
 }
 
 h {
@@ -27,22 +27,22 @@ p {
     text-align: center;
 }
 
-.message {
-  width: 500px;  
-  height: 500px; 
+h1 {
+  text-align: center;
+  margin: 35px 0 20px 0 !important;
+  color: #8080f0 !important;
 }
 
-#msgtru {
-    background-color: #373940;
-    color: #b0b0b0;
-    border: 3px solid #000000;
-    
+.form-control {
+      font-family: Monospace;
+      background-color: #1e1f24 !important;
+      color: #b0b0b0 !important;
 }
 
-form {
-  width: 30px; /* Or a max-width */
-  margin: 0 auto; /* Sets top/bottom margins to 0, left/right to auto */
-}
+.form-control:focus {
+  color: #b0b0b0 !important;
+  background-color: #1e1f24 !important;
 
+}
 
 
